<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="Profile">
            <menu>
                <item
                    android:id="@+id/Nav_Profile"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
                <item
                    android:id="@+id/forgotPass"
                    android:title="@string/forgot_password" />
            </menu>
        </item>
    </group>

    <item android:title="Communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/share"
                    android:icon="@drawable/ic_baseline_share_24"
                    android:title="@string/share" />
                <item
                    android:id="@+id/rateUs"
                    android:icon="@drawable/ic_baseline_rate_review_24"
                    android:title="@string/rate_us" />
            </group>
        </menu>
    </item>

</menu>