<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/AdminLogin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/admin_login"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <Button
        android:id="@+id/ProfessorLogin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/green"
        android:elevation="20dp"
        android:text="@string/professor_login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/AdminLogin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/AdminLogin"
        app:layout_constraintTop_toTopOf="@+id/AdminLogin" />

    <Button
        android:id="@+id/StudentLogin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/skyBlue"
        android:elevation="8dp"
        android:text="@string/student_login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/ProfessorLogin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ProfessorLogin"
        app:layout_constraintTop_toTopOf="@+id/ProfessorLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>