<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/action_register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:hint="@string/prompt_name"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:background="@drawable/textbox"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/textbox"
        android:hint="@string/prompt_email"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/prompt_password"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:textSize="16sp"
        android:background="@drawable/textbox"
        android:imeActionLabel="@string/action_register"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />


    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button"
        android:enabled="true"
        android:text="@string/action_register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.182" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn"
        app:layout_constraintVertical_bias="0.871">

        <TextView
            android:id="@+id/alreadyTxt"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="9dp"
            android:text="@string/prompt_already"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loginTxt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="13dp"
            android:layout_toEndOf="@+id/alreadyTxt"
            android:text="@string/prompt_login_here"
            android:textColor="@color/darkRed"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.842" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:indeterminateDuration="800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>