<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    android:orientation="vertical"
    tools:context=".admin.adminLogin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="95dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="120dp"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-black"
                android:shadowColor="@color/darkRed"
                android:shadowDx="25"
                android:shadowDy="54"
                android:shadowRadius="0"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/darkRed"
                android:textSize="54sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/substring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:text="@string/substring"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/adminEmail"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintHorizontal_bias="0.26"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintVertical_bias="0.0"/>

            <EditText
                android:id="@+id/adminEmail"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/text_box"
                android:importantForAutofill="no"
                android:hint="@string/prompt_email"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintBottom_toTopOf="@+id/adminPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintVertical_bias="0.468"/>

            <EditText
                android:id="@+id/adminPassword"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/text_box"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/adminEmail"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/adminEmail"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <Button
                android:id="@+id/adminLoginBtn"
                android:layout_width="300dp"
                android:layout_height="42dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/action_log_in"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adminPassword"
                app:layout_constraintVertical_bias="0.21" />

            <ProgressBar
                android:id="@+id/adminProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateDrawable="@drawable/progress_bar"
                android:indeterminateDuration="800"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/adminPassword"
                app:layout_constraintEnd_toEndOf="@+id/adminEmail"
                app:layout_constraintStart_toStartOf="@+id/adminEmail"
                app:layout_constraintTop_toBottomOf="@+id/adminEmail"  />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>